FCTF-k3s-manifest/prod/app/deployment-listener/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: deployment-listener-svc
spec:
  ports:
    - protocol: TCP
      port: 5030
      targetPort: 5030
  selector:
    app: deployment-listener
  type: ClusterIP
